20.08.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * Added a new structure in order to retrieve some statistics on the
          sequence within the fcl_file_t structure. This will help to save the
          file in place.

16.08.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * Added fcl_get_maximum_buffer_size function that may help to find out
          the buffer size needed to save the file in place.

08.08.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * ReSTifying ChangeLog, RoadMap, HISTORY and README

01.05.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * HISTORY changes as things comes to my mind

10.04.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * Now it seems that reading in a file, where data has been deleted is
          ok.
        * Modified the reading test in order that it'll be less obvious. It
          seems to pass...
        * Documentation

05.04.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * Trying to understand where the problem might be !

03.04.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * I was using one single variable for two different things ! Trying to
          look for where things might be screwed up.

22.03.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * Found things that was not ok... Still have to correct the
          fcl_read_bytes second case.

21.03.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * Correcting bugs in deleting files (still a huge number of bugs in
          there)
        * tuning testing values

05.03.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>
        * Deleting bytes
        * simplifying code (is_in_sequence not needed when a boolean values
          already indicates the presence or not).
        * deleting basic test
        * on the difficult road to save the file

03.03.2011
    - Olivier Delhomme <olivier.delhomme@free.fr>