@@ -92,6 +92,31 @@ static void print_message(gboolean success, const char *format, ...)
         }
 }
 
+
+/**
+ * Prints stats of the buffers (if any) on an fcl_file_t file
+ */
+static void print_buffer_stats(fcl_file_t *a_file)
+{
+    fcl_stat_buf_t *stats = NULL;
+
+    stats = fcl_get_buffer_stats(a_file);
+
+    if (stats != NULL)
+        {
+            fprintf(stdout, "\n");
+            fprintf(stdout, "Buffer statistics on %s :\n", a_file->name);
+            fprintf(stdout, " Min buffer size : %d\n", stats->min_buf_size);
+            fprintf(stdout, " Max buffer size : %d\n", stats->max_buf_size);
+            fprintf(stdout, " Additions size : %d\n", stats->add_size);
+            fprintf(stdout, " Real buffer edition sizes : %d\n", stats->real_edit_size);
+            fprintf(stdout, "\n");
+
+            g_free(stats);
+        }
+}
+
+
 /**
  * Retrieves the home dir
  * @return the home dir in a gchar * that can be freed when no longer needed
@@ -264,7 +289,6 @@ static void test_openning_and_overwriting_files(void)
     gboolean result = TRUE;
     gsize size = 0;
     gchar *filename = NULL;
-    gsize max_buf_size = 0;
 
     buffer = (guchar *) g_strdup_printf("ABC");
 
@@ -275,8 +299,7 @@ static void test_openning_and_overwriting_files(void)
 
     print_message(result == FALSE, Q_("Trying to overwrite in a READ ONLY opened file"));
 
-    max_buf_size = fcl_get_maximum_buffer_size(my_test_file);
-    fprintf(stdout, "Maximum buffer size == %ld\n", max_buf_size);
+    print_buffer_stats(my_test_file);
 
     fcl_close_file(my_test_file, FALSE);
 
@@ -293,8 +316,7 @@ static void test_openning_and_overwriting_files(void)
     data = fcl_read_bytes(my_test_file, 0, &size);
     fcl_print_data(data, size, TRUE);
 
-    max_buf_size = fcl_get_maximum_buffer_size(my_test_file);
-    fprintf(stdout, "Maximum buffer size == %ld\n", max_buf_size);
+    print_buffer_stats(my_test_file);
 
     fcl_close_file(my_test_file, FALSE);
 
@@ -312,7 +334,6 @@ static void test_openning_and_inserting_in_files(void)
     guchar *buffer = NULL;
     guchar *data = NULL;
     gsize size = 0;
-    gsize max_buf_size = 0;
 
     buffer = (guchar *) g_strdup_printf("Is this inserted in the file ??");
 
@@ -326,11 +347,10 @@ static void test_openning_and_inserting_in_files(void)
     /* Verifying this (double check here) */
     size = 200;
     data = fcl_read_bytes(my_test_file, 0, &size);
-    fprintf(stdout, Q_("Size read : %ld\n"), size);
+    fprintf(stdout, Q_("Size read : %d\n"), size);
     fcl_print_data(data, size, TRUE);
 
-    max_buf_size = fcl_get_maximum_buffer_size(my_test_file);
-    fprintf(stdout, "Maximum buffer size == %ld\n", max_buf_size);
+    print_buffer_stats(my_test_file);
 
     fcl_close_file(my_test_file, FALSE);
 }
@@ -345,7 +365,6 @@ static void test_openning_and_deleting_in_files(void)
     guchar *data = NULL;
     gsize size = 0;
     gchar *filename = NULL;
-    gsize max_buf_size = 0;
 
     filename = g_build_path(G_DIR_SEPARATOR_S, get_home_dir(), ".bashrc", NULL);
     my_test_file = fcl_open_file(filename, LIBFCL_MODE_WRITE);
@@ -360,8 +379,7 @@ static void test_openning_and_deleting_in_files(void)
     data = fcl_read_bytes(my_test_file, 2, &size);
     fcl_print_data(data, size, TRUE);
 
-    max_buf_size = fcl_get_maximum_buffer_size(my_test_file);
-    fprintf(stdout, "Maximum buffer size == %ld\n", max_buf_size);
+    print_buffer_stats(my_test_file);
 
     fcl_close_file(my_test_file, FALSE);
 }
